k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django-container
        image: cloud:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
