k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: LoadBalancer
  selector:
    app: django  # Isto liga o serviço aos pods do Deployment acima
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30002
