k8s/backend/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: projeto.local             
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service    
            port:
              number: 8000
